Bug: Fixed a bug where page crashed if the user had liked gallerites.
href to explore button was looking for gallerites array instead of likedGallerites. It is now changed.

--- a/views/user.ejs
+++ b/views/user.ejs
@@ -115,7 +115,7 @@
 				<% } %>
 			</div>
 
-			<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
+			<a href="/explore/<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
 		</div>
 		<% } %>
 			
