Refactor: Removed body's background image and replaced it with color black for now.
Application will be restyled.

--- a/views/sass/screen.scss
+++ b/views/sass/screen.scss
@@ -16,9 +16,7 @@ $info-bk-color: #D6D6D6;
 }
 
 body {
-	background-image: url("wall.jpg");
-	background-size: cover;
-	background-attachment: fixed;
+	background-color: black;
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
