--- a/views/stylesheets/screen.css
+++ b/views/stylesheets/screen.css
@@ -7,15 +7,13 @@
 
 /* line 18, ../sass/screen.scss */
 body {
-  background-image: url("wall.jpg");
-  background-size: cover;
-  background-attachment: fixed;
+  background-color: black;
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 .generic-button {
   width: 90px;
   padding: 7px;
@@ -24,12 +22,12 @@ body {
   color: white;
   background-color: #373F51;
 }
-/* line 40, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 .generic-button:hover {
   cursor: pointer;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 .danger-button {
   width: 90px;
   padding: 7px;
@@ -38,12 +36,12 @@ body {
   color: white;
   background-color: #F05D5E;
 }
-/* line 40, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 .danger-button:hover {
   cursor: pointer;
 }
 
-/* line 48, ../sass/screen.scss */
+/* line 46, ../sass/screen.scss */
 .ok-button {
   width: 90px;
   padding: 7px;
@@ -52,12 +50,12 @@ body {
   color: white;
   background-color: #0F7173;
 }
-/* line 40, ../sass/screen.scss */
+/* line 38, ../sass/screen.scss */
 .ok-button:hover {
   cursor: pointer;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 .menu-bar {
   color: #404040;
   padding: 10px;
@@ -65,19 +63,19 @@ body {
   background-color: white;
   opacity: 0.9;
 }
-/* line 59, ../sass/screen.scss */
+/* line 57, ../sass/screen.scss */
 .menu-bar h3 {
   margin: 0;
 }
 
-/* line 64, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 .sizer {
   margin: 0 auto;
   width: 100%;
   max-width: 900px;
 }
 
-/* line 70, ../sass/screen.scss */
+/* line 68, ../sass/screen.scss */
 #login-button {
   width: 90px;
   font-family: 'Open Sans', sans-serif;
@@ -85,79 +83,79 @@ body {
   font-size: 0.8em;
 }
 
-/* line 77, ../sass/screen.scss */
+/* line 75, ../sass/screen.scss */
 .space-between-wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-/* line 83, ../sass/screen.scss */
+/* line 81, ../sass/screen.scss */
 .content {
   background-color: white;
   opacity: 0.9;
   padding: 10px;
 }
 
-/* line 89, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 .gallerite {
   margin: 5px;
   padding: 5px;
   border: 1px solid gray;
   width: 200px;
 }
-/* line 94, ../sass/screen.scss */
+/* line 92, ../sass/screen.scss */
 .gallerite img {
   width: 100%;
 }
 
-/* line 99, ../sass/screen.scss */
+/* line 97, ../sass/screen.scss */
 .description {
   text-align: center;
 }
 
-/* line 103, ../sass/screen.scss */
+/* line 101, ../sass/screen.scss */
 .type-header {
   margin: 10px 0 10px 0;
   background-color: gray;
   padding: 5px;
   color: white;
 }
-/* line 108, ../sass/screen.scss */
+/* line 106, ../sass/screen.scss */
 .type-header:hover {
   cursor: pointer;
 }
 
-/* line 113, ../sass/screen.scss */
+/* line 111, ../sass/screen.scss */
 input {
   width: 220px;
   margin: 10px 0 10px 0;
   padding: 5px;
 }
 
-/* line 119, ../sass/screen.scss */
+/* line 117, ../sass/screen.scss */
 .main-hr {
   margin: 10px 0 10px 0;
 }
 
-/* line 123, ../sass/screen.scss */
+/* line 121, ../sass/screen.scss */
 .minor-hr {
   margin: 5px 0 5px 0;
 }
 
-/* line 127, ../sass/screen.scss */
+/* line 125, ../sass/screen.scss */
 .new-gallerite-form {
   display: none;
 }
 
-/* line 131, ../sass/screen.scss */
+/* line 129, ../sass/screen.scss */
 .error-message {
   background-color: #F05D5E;
   color: white;
   padding: 3px;
 }
 
-/* line 137, ../sass/screen.scss */
+/* line 135, ../sass/screen.scss */
 .adder {
   display: flex;
   flex-wrap: wrap;
@@ -165,14 +163,14 @@ input {
   font-size: 0.8em;
   color: #404040;
 }
-/* line 143, ../sass/screen.scss */
+/* line 141, ../sass/screen.scss */
 .adder img {
   width: 40px;
   height: 40px;
   margin-right: 5px;
 }
 
-/* line 150, ../sass/screen.scss */
+/* line 148, ../sass/screen.scss */
 .likes-section {
   display: flex;
   flex-wrap: wrap;
@@ -180,67 +178,67 @@ input {
   justify-content: space-between;
 }
 
-/* line 157, ../sass/screen.scss */
+/* line 155, ../sass/screen.scss */
 .like-button, .explore-button, .unlike-button, .delete-button {
   color: white;
   border: none;
   border-radius: 3px;
   padding: 5px;
 }
-/* line 162, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 .like-button:hover, .explore-button:hover, .unlike-button:hover, .delete-button:hover {
   cursor: pointer;
 }
 
-/* line 167, ../sass/screen.scss */
+/* line 165, ../sass/screen.scss */
 .like-button {
   background-color: #0F7173;
 }
 
-/* line 171, ../sass/screen.scss */
+/* line 169, ../sass/screen.scss */
 .explore-button, .delete-button {
   margin-top: 5px;
   width: 100%;
 }
 
-/* line 176, ../sass/screen.scss */
+/* line 174, ../sass/screen.scss */
 .explore-button {
   background-color: #373F51;
 }
 
-/* line 180, ../sass/screen.scss */
+/* line 178, ../sass/screen.scss */
 .delete-button {
   background-color: #F05D5E;
 }
 
-/* line 184, ../sass/screen.scss */
+/* line 182, ../sass/screen.scss */
 .unlike-button {
   background-color: #F05D5E;
 }
 
-/* line 189, ../sass/screen.scss */
+/* line 187, ../sass/screen.scss */
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
   margin-right: 5px;
 }
 
-/* line 194, ../sass/screen.scss */
+/* line 192, ../sass/screen.scss */
 .article-icon {
   width: 100px !important;
 }
 
-/* line 198, ../sass/screen.scss */
+/* line 196, ../sass/screen.scss */
 .emblem-link {
   text-decoration: none;
   color: #404040;
 }
 
-/* line 203, ../sass/screen.scss */
+/* line 201, ../sass/screen.scss */
 .user-info, .gallerite-info {
   text-align: center;
 }
 
-/* line 207, ../sass/screen.scss */
+/* line 205, ../sass/screen.scss */
 .info-entry {
   background-color: #D6D6D6;
   width: 300px;
@@ -249,12 +247,12 @@ input {
   padding: 5px;
   border-radius: 5px;
 }
-/* line 214, ../sass/screen.scss */
+/* line 212, ../sass/screen.scss */
 .info-entry a {
   color: #404040;
 }
 
-/* line 219, ../sass/screen.scss */
+/* line 217, ../sass/screen.scss */
 .like-user {
   width: 100%;
   background-color: #D6D6D6;
@@ -267,23 +265,23 @@ input {
   border-radius: 5px;
   margin-bottom: 5px;
 }
-/* line 230, ../sass/screen.scss */
+/* line 228, ../sass/screen.scss */
 .like-user img {
   width: 30px;
   height: 30px;
   margin-right: 10px;
 }
 
-/* line 237, ../sass/screen.scss */
+/* line 235, ../sass/screen.scss */
 #explore-image {
   max-width: 300px;
 }
-/* line 239, ../sass/screen.scss */
+/* line 237, ../sass/screen.scss */
 #explore-image:hover {
   cursor: zoom-in;
 }
 
-/* line 244, ../sass/screen.scss */
+/* line 242, ../sass/screen.scss */
 .zoomed-image {
   display: none;
   text-align: center;
@@ -292,7 +290,7 @@ input {
   padding: 20px;
 }
 
-/* line 252, ../sass/screen.scss */
+/* line 250, ../sass/screen.scss */
 .layer {
   display: none;
   position: fixed;
@@ -306,27 +304,27 @@ input {
   padding: 0;
 }
 
-/* line 266, ../sass/screen.scss */
+/* line 264, ../sass/screen.scss */
 .original-image:hover {
   cursor: zoom-out;
 }
 
-/* line 271, ../sass/screen.scss */
+/* line 269, ../sass/screen.scss */
 .stop-scrolling {
   height: 100%;
   overflow-y: hidden;
 }
 
-/* line 276, ../sass/screen.scss */
+/* line 274, ../sass/screen.scss */
 .info-button-wrapper {
   margin-top: 10px;
 }
-/* line 278, ../sass/screen.scss */
+/* line 276, ../sass/screen.scss */
 .info-button-wrapper button {
   width: 120px;
 }
 
-/* line 283, ../sass/screen.scss */
+/* line 281, ../sass/screen.scss */
 .gallerite-delete-button {
   padding: 5px;
   border-radius: 3px;
@@ -334,30 +332,30 @@ input {
   color: white;
   background-color: #F05D5E;
 }
-/* line 289, ../sass/screen.scss */
+/* line 287, ../sass/screen.scss */
 .gallerite-delete-button:hover {
   cursor: pointer;
 }
 
-/* line 294, ../sass/screen.scss */
+/* line 292, ../sass/screen.scss */
 #search-div {
   margin-bottom: 20px;
   padding: 0 10px 0 10px;
   display: flex;
   flex-wrap: wrap;
 }
-/* line 299, ../sass/screen.scss */
+/* line 297, ../sass/screen.scss */
 #search-div form {
   margin: 0;
   padding: 0;
   width: 100%;
 }
-/* line 303, ../sass/screen.scss */
+/* line 301, ../sass/screen.scss */
 #search-div form input {
   width: calc(100% - 100px);
 }
 
-/* line 309, ../sass/screen.scss */
+/* line 307, ../sass/screen.scss */
 .footer {
   font-size: 0.8em;
   color: #404040;
@@ -366,14 +364,14 @@ input {
   opacity: 0.9;
   padding: 5px;
 }
-/* line 316, ../sass/screen.scss */
+/* line 314, ../sass/screen.scss */
 .footer ul {
   list-style: none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-/* line 322, ../sass/screen.scss */
+/* line 320, ../sass/screen.scss */
 .footer a {
   color: #404040;
 }
