--- a/views/myGallerites.ejs
+++ b/views/myGallerites.ejs
@@ -34,7 +34,7 @@
 
 		<div class="gallerite">
 			<% if (gallerites[gallerite].type == "image") { %>
-			<img src=<%= gallerites[gallerite].url %>>
+			<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
 			<% } else if (gallerites[gallerite].type == "youtube") { %>
 			<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
 			<% } else if (gallerites[gallerite].type == "article") { %>
@@ -74,7 +74,7 @@
 
 		<div class="gallerite">
 			<% if (likedGallerites[gallerite].type == "image") { %>
-			<img src=<%= likedGallerites[gallerite].url %>>
+			<img src=<%= likedGallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
 			<% } else if (likedGallerites[gallerite].type == "youtube") { %>
 			<iframe width="190" src=<%= likedGallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
 			<% } else if (likedGallerites[gallerite].type == "article") { %>
