--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,7 +46,7 @@
 		<% for (var gallerite in gallerites) { %>
 		<div class="gallerite">
 			<% if (gallerites[gallerite].type == "image") { %>
-			<img src=<%= gallerites[gallerite].url %>>
+			<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
 			<% } else if (gallerites[gallerite].type == "youtube") { %>
 			<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
 			<% } else if (gallerites[gallerite].type == "article") { %>
