--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,10 @@
 <head>
 	<title>Galleria</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<!-- Have these loaded before local css file to override unwanted behaviour of default css. -->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bricklayer/0.4.2/bricklayer.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/bricklayer/0.4.2/bricklayer.min.js"></script>
+
 	<link rel="stylesheet" href="stylesheets/screen.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -10,6 +14,9 @@
 	<link href="http://weloveiconfonts.com/api/?family=fontawesome" rel="stylesheet">
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	
+
+	
 	<script src="scripts/index.js"></script>
 </head>
 <body>
@@ -43,41 +50,43 @@
 		<p>We're still new and small :(</p>
 		<p>Nobody added any gallerites... Please be the first to add one.</p>
 		<% } else { %>
-		<% for (var gallerite in gallerites) { %>
-		<div class="gallerite">
-			<% if (gallerites[gallerite].type == "image") { %>
-			<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
-			<% } else if (gallerites[gallerite].type == "youtube") { %>
-			<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
-			<% } else if (gallerites[gallerite].type == "article") { %>
-			<a href=<%= gallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
-			<% } %>
-			<p class="description"><%= gallerites[gallerite].description %></p><hr class="minor-hr">
-			<p>Added by:</p>
-
-			
-			<a class="adder" href="/user/<%= gallerites[gallerite].addedBy.userId %>">
-				<img src=<%= gallerites[gallerite].addedBy.imageLink %>>
-				<p><%= gallerites[gallerite].addedBy.name %></p>
-			</a><hr class="minor-hr">
-
-
-			<div class="likes-section">
-				<p>Likes: <span class="no-of-likes"><%= gallerites[gallerite].likedBy.length %></span></p>
-
-				<% if (user && gallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
-
-				<button class="action like-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
-
-				<% } else if (user && gallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
-
-				<button class="action unlike-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
-
+		<div class="bricklayer">
+			<% for (var gallerite in gallerites) { %>
+			<div class="gallerite">
+				<% if (gallerites[gallerite].type == "image") { %>
+				<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
+				<% } else if (gallerites[gallerite].type == "youtube") { %>
+				<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
+				<% } else if (gallerites[gallerite].type == "article") { %>
+				<a href=<%= gallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
 				<% } %>
+				<p class="description"><%= gallerites[gallerite].description %></p><hr class="minor-hr">
+				<p>Added by:</p>
+
+				
+				<a class="adder" href="/user/<%= gallerites[gallerite].addedBy.userId %>">
+					<img src=<%= gallerites[gallerite].addedBy.imageLink %>>
+					<p><%= gallerites[gallerite].addedBy.name %></p>
+				</a><hr class="minor-hr">
+
+
+				<div class="likes-section">
+					<p>Likes: <span class="no-of-likes"><%= gallerites[gallerite].likedBy.length %></span></p>
+
+					<% if (user && gallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
+
+					<button class="action like-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
+
+					<% } else if (user && gallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
+
+					<button class="action unlike-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
+
+					<% } %>
+				</div>
+				<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
 			</div>
-			<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
+			<% } %>
 		</div>
-		<% } %>
 		<% } %>
 	</div>
 
