--- a/views/myGallerites.ejs
+++ b/views/myGallerites.ejs
@@ -3,6 +3,11 @@
 <head>
 	<title>Galleria</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+
+	<!-- Have these loaded before local css file to override unwanted behaviour of default css. -->
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/bricklayer/0.4.2/bricklayer.min.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/bricklayer/0.4.2/bricklayer.min.js"></script>
+
 	<link rel="stylesheet" href="/stylesheets/screen.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -30,37 +35,38 @@
 		<p>You've got nothing <i><%= user._json.name %></i>! You haven't added any gallerites.</p>
 		<% } else { %>
 		<p><i><%= user._json.name %></i>, Here are the gallerites you added.</p><hr class="main-hr">
-		<% for (var gallerite in gallerites) { %>
-
-		<div class="gallerite">
-			<% if (gallerites[gallerite].type == "image") { %>
-			<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
-			<% } else if (gallerites[gallerite].type == "youtube") { %>
-			<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
-			<% } else if (gallerites[gallerite].type == "article") { %>
-			<a href=<%= gallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
-			<% } %>
-			<p class="description"><%= gallerites[gallerite].description %></p><hr class="minor-hr">
-
-			<div class="likes-section">
-				<p>Likes: <span class="no-of-likes"><%= gallerites[gallerite].likedBy.length %></span></p>
-
-				<% if (user && gallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
-
-				<button class="action like-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
-
-				<% } else if (user && gallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
-
-				<button class="action unlike-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
-
+		<div class="bricklayer">
+			<% for (var gallerite in gallerites) { %>
+			<div class="gallerite">
+				<% if (gallerites[gallerite].type == "image") { %>
+				<img src=<%= gallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
+				<% } else if (gallerites[gallerite].type == "youtube") { %>
+				<iframe width="190" src=<%= gallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
+				<% } else if (gallerites[gallerite].type == "article") { %>
+				<a href=<%= gallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
 				<% } %>
+				<p class="description"><%= gallerites[gallerite].description %></p><hr class="minor-hr">
+
+				<div class="likes-section">
+					<p>Likes: <span class="no-of-likes"><%= gallerites[gallerite].likedBy.length %></span></p>
+
+					<% if (user && gallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
+
+					<button class="action like-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
+
+					<% } else if (user && gallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
+
+					<button class="action unlike-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
+
+					<% } %>
+				</div>
+				<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
+				<button class="delete-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>>Delete</button>
 			</div>
-			<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
-			<button class="delete-button" gallerite=<%- JSON.stringify(gallerites[gallerite].serialNumber) %>>Delete</button>
+
+
+			<% } %>
 		</div>
-
-
-		<% } %>
 		<% } %>
 	</div>
 
@@ -70,40 +76,41 @@
 		<p>Gallerites added by other users you liked appear here... You haven't liked any yet... Be nice and like something!</p>
 		<% } else { %>
 		<p>You liked these from other users.</p><hr class="main-hr">
-		<% for (var gallerite in likedGallerites) { %>
-
-		<div class="gallerite">
-			<% if (likedGallerites[gallerite].type == "image") { %>
-			<img src=<%= likedGallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
-			<% } else if (likedGallerites[gallerite].type == "youtube") { %>
-			<iframe width="190" src=<%= likedGallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
-			<% } else if (likedGallerites[gallerite].type == "article") { %>
-			<a href=<%= likedGallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
-			<% } %>
-			<p class="description"><%= likedGallerites[gallerite].description %></p><hr class="minor-hr">
-			<p>Added by:</p>
-
-			<a class="adder" href="/user/<%= likedGallerites[gallerite].addedBy.userId %>">
-				<img src=<%= likedGallerites[gallerite].addedBy.imageLink %>>
-				<p><%= likedGallerites[gallerite].addedBy.name %></p>
-			</a><hr class="minor-hr">
-			<div class="likes-section">
-				<p>Likes: <span class="no-of-likes"><%= likedGallerites[gallerite].likedBy.length %></span></p>
-
-				<% if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
-
-				<button class="action like-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
-
-				<% } else if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
-
-				<button class="action unlike-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
-
+		<div class="bricklayer">
+			<% for (var gallerite in likedGallerites) { %>
+			<div class="gallerite">
+				<% if (likedGallerites[gallerite].type == "image") { %>
+				<img src=<%= likedGallerites[gallerite].url %> onError="this.onerror=null;this.src='/stylesheets/error.png';">
+				<% } else if (likedGallerites[gallerite].type == "youtube") { %>
+				<iframe width="190" src=<%= likedGallerites[gallerite].url %> frameborder="0" allowfullscreen></iframe>
+				<% } else if (likedGallerites[gallerite].type == "article") { %>
+				<a href=<%= likedGallerites[gallerite].url %> target="blank"><div style="text-align: center;"><img class="article-icon" src="/stylesheets/article.svg"></div></a>
 				<% } %>
-			</div>
+				<p class="description"><%= likedGallerites[gallerite].description %></p><hr class="minor-hr">
+				<p>Added by:</p>
 
-			<a href="/explore/<%- JSON.stringify(gallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
+				<a class="adder" href="/user/<%= likedGallerites[gallerite].addedBy.userId %>">
+					<img src=<%= likedGallerites[gallerite].addedBy.imageLink %>>
+					<p><%= likedGallerites[gallerite].addedBy.name %></p>
+				</a><hr class="minor-hr">
+				<div class="likes-section">
+					<p>Likes: <span class="no-of-likes"><%= likedGallerites[gallerite].likedBy.length %></span></p>
+
+					<% if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) == -1) { %>
+
+					<button class="action like-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-up"></span>Like</button>
+
+					<% } else if (user && likedGallerites[gallerite].likedBy.indexOf(user.id) > -1) { %>
+
+					<button class="action unlike-button" gallerite=<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>><span class="fontawesome-thumbs-down"></span>Unlike</button>
+
+					<% } %>
+				</div>
+
+				<a href="/explore/<%- JSON.stringify(likedGallerites[gallerite].serialNumber) %>"><button class="explore-button">Explore</button></a>
+			</div>
+			<% } %>
 		</div>
-		<% } %>
 		<% } %>
 	</div>
 
