--- a/views/gallerite.ejs
+++ b/views/gallerite.ejs
@@ -31,6 +31,13 @@
 		</div>
 	</div>
 
+	<div class="content sizer" id="search-div">
+		<form method="post" action="/search" id="gallerites-search">
+			<input name="input" placeholder="Enter tag to search" required>
+			<button type="submit" class="ok-button">Search</button>
+		</form>
+	</div>
+
 	<div class="content sizer gallerite-info">
 
 
