--- a/views/myGallerites.ejs
+++ b/views/myGallerites.ejs
@@ -30,6 +30,13 @@
 		</div>
 	</div>
 
+	<div class="content sizer" id="search-div">
+		<form method="post" action="/search" id="gallerites-search">
+			<input name="input" placeholder="Enter tag to search" required>
+			<button type="submit" class="ok-button">Search</button>
+		</form>
+	</div>
+
 	<div class="content sizer">
 		<% if (gallerites.length == 0) { %>
 		<p>You've got nothing <i><%= user._json.name %></i>! You haven't added any gallerites.</p>
